# mdlbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.production.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  background.py  runtime.py  usage.py
app/api/: __init__.py  app.py  webhook.py
app/bot/: __init__.py  callbacks.py  factory.py  keyboards.py  middlewares.py  progress.py  repositories.py  server.py  states.py
app/core/: __init__.py  bootstrap.py  catalogs.py  config.py  errors.py  i18n.py  logging.py  permissions.py  redis.py  secrets.py  settings.py
app/db/: __init__.py  base.py  constants.py  session.py
app/dispatcher/: __init__.py  service.py
app/services/: __init__.py  admission.py  downloads.py  quota.py  streaming.py  url_policy.py
app/workers/: __init__.py  auth.py  client.py  control.py  downloads.py  media.py
docker/: nginx.Dockerfile  postgres.Dockerfile  redis.Dockerfile  telegram-bot-api.Dockerfile
docker/app/: entrypoint.sh
docker/monitoring/: prometheus.yml
docker/nginx/: entrypoint.sh  nginx.conf  site.conf.template  trusted-proxies.conf
docker/redis/: entrypoint.sh  healthcheck.sh  redis.conf
docker/secrets/: README.md
docker/security/: README.md
docker/telegram-bot-api/: entrypoint.sh
docs/: STAGE-1-ARCHITECTURE.md  STAGE-2-DATABASE.md  STAGE-3-INFRASTRUCTURE.md  STAGE-4-CORE.md  STAGE-5-BOT.md  STAGE-6-QUEUE-WORKERS.md  STAGE-7-DOWNLOADS.md  STAGE-8-STREAMING.md
locales/en/: admin.ftl  buttons.ftl  errors.ftl  messages.ftl  public.ftl  web.ftl
locales/fa/: admin.ftl  (+5 more)
tests/: __init__.py  test_usage.py
(+51 files in other folders)
