[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdlbot"
version = "0.2.0"
description = "Production Telegram file delivery platform"
requires-python = ">=3.12,<3.13"
dependencies = [
  "SQLAlchemy==2.0.41",
  "alembic==1.16.2",
  "psycopg[binary]==3.2.9",
]

[project.optional-dependencies]
test = [
  "pytest==8.4.1",
  "pytest-asyncio==1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
  "postgres: requires a disposable PostgreSQL database",
]

