[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdlbot"
version = "0.8.0"
description = "Production Telegram file delivery platform"
requires-python = ">=3.12,<3.13"
dependencies = [
  "SQLAlchemy==2.0.41",
  "alembic==1.16.2",
  "psycopg[binary]==3.2.9",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "redis==8.0.1",
  "structlog==26.1.0",
  "fluent.runtime==0.4.0",
  "fastapi==0.139.0",
  "uvicorn==0.51.0",
  "aiogram==3.30.0",
  "aiohttp==3.14.2",
]

[project.optional-dependencies]
test = [
  "pytest==8.4.1",
  "pytest-asyncio==1.0.0",
  "PyYAML==6.0.2",
  "httpx==0.28.1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
  "postgres: requires a disposable PostgreSQL database",
]
